# hive

./: .env  Cargo.toml
schema/: schema.toml
src/: lib.rs  main.rs  queen.rs
src/db/: connect.rs  mod.rs  query_builder.rs
src/db/query_builder/: builder.rs  join_ops.rs  mod.rs  where_ops.rs
src/handlers/: jobs.rs
src/jobs/: mod.rs
src/jobs/capabilities/db/: read_db.rs
src/jobs/capabilities/schema/: mod.rs  write_schema.rs
src/jobs/orchestrators/schema/: mod.rs  populate_schema.rs
src/server/: mod.rs  routes.rs  server.rs
src/state/: app_state.rs
src/traits/: agent.rs  mod.rs  worker.rs
src/workers/: coder.rs  file_manager.rs  mod.rs  shell.rs
