[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
dotenv = "0.15"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"