[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
inventory = "0.3"
tokio = { version = "1.48", features = ["full"] }